[tool.poetry]
name = "speech2spikes"
version = "1.0.1"
description = "Speech2Spikes: Efficient Audio Encoding Pipeline for Real-time Neuromorphic Systems"
authors = ["Noah Pacik-Nelson <noah.pacik-nelson@accenture.com>"]
homepage = "https://github.com/Accenture/speech2spikes"
readme = "README.md"
license = "Proprietary"
exclude = ["tests"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
torchaudio = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
